--- a/.env
+++ b/.env
@@ -28,13 +28,22 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# MAIL_MAILER=smtp
+# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=003675808ca9bc
+# MAIL_PASSWORD=d82a84df45b317
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="example@gmail.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=003675808ca9bc
-MAIL_PASSWORD=d82a84df45b317
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="example@gmail.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=katarinasumba@gmail.com
+MAIL_PASSWORD=dgyhqxdvfqqliyis
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="katarinasumba@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 
